# Skribble

./: .clang-format  .clang-tidy  .cmake-format.yaml  .gitignore  CMakeLists.txt  Doxyfile  Doxyfile-mcss  FEATURES_USED.md  README.md  TODO.md
.github/workflows/: static_analysis.yaml  windeploy.yaml
cmake/: CompilerWarnings.cmake  Coverage.cmake  Doxygen.cmake  Sanitizers.cmake  StandardProjectSettings.cmake
docs/: abstract__network_8cpp.xml  abstract__network_8cpp_source.html  abstract__network_8hpp.xml  abstract__network_8hpp_source.html  annotated.html  cached__resource_8hpp.xml  cached__resource_8hpp_source.html  cached__resource__test_8cpp.xml  cached__resource__test_8cpp_source.html  canvas_8cpp.xml  canvas_8cpp_source.html  canvas_8hpp.xml  canvas_8hpp_source.html  canvas__config_8hpp.xml  canvas__config_8hpp_source.html  classDummy-members.html  classDummy.html  classDummy.xml  classTestBase-members.html  classTestBase.html  classTestBase.xml  classes.html  classsk_1_1AbstractNetwork-members.html  classsk_1_1AbstractNetwork.html  classsk_1_1AbstractNetwork.xml  classsk_1_1AbstractNetwork__coll__graph.map  classsk_1_1AbstractNetwork__coll__graph.md5  classsk_1_1AbstractNetwork__inherit__graph.map  classsk_1_1AbstractNetwork__inherit__graph.md5  classsk_1_1BrushMode-members.html  classsk_1_1BrushMode.html  classsk_1_1BrushMode.xml  classsk_1_1BrushMode__coll__graph.map  classsk_1_1BrushMode__inherit__graph.md5  classsk_1_1CachedResource-members.html  classsk_1_1CachedResource.html  classsk_1_1CachedResource.xml  classsk_1_1Canvas-members.html  classsk_1_1Canvas.html  classsk_1_1Canvas.xml  (+187 more)
docs/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  functions_0.js  functions_1.js  namespaces_0.js  namespaces_1.js  searchdata.js
scripts/: commands_parse.py  run-clang-format.py  run-clang-tidy.py  run-clazy.sh  run-template.bat  san_filter.py
src/: CMakeLists.txt  abstract_network.cpp  abstract_network.hpp  cached_resource.hpp  canvas.cpp  canvas.hpp  canvas_config.hpp  client.cpp  client.hpp  draw_history.cpp  draw_history.hpp  draw_mode.cpp  draw_mode.hpp  dummy_network.cpp  dummy_network.hpp  fixed_cached_resource.hpp  format.hpp  icons.qrc  main.cpp  main.qml  message_parser.cpp  message_parser.hpp  network_config.hpp  network_factory.cpp  network_factory.hpp  qml.qrc  qtquickcontrols2.conf  server.cpp  server.hpp
src/qml/: main.qml
src/qml/WorkArea/: WorkArea.qml  qmldir
tests/: CMakeLists.txt  cached_resource_test.cpp  fcached_resource_test.cpp  format_test.cpp  message_parser_test.cpp
tests/helper/: test.hpp
